--- a/css/style.css
+++ b/css/style.css
@@ -512,6 +512,7 @@ textarea.form-popup__input {
 
 .header__logo img {
   width: 100%;
+  height: 100%;
 }
 
 .header__slogan {
@@ -651,6 +652,7 @@ textarea.form-popup__input {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 22px;
           flex: 0 0 22px;
+  width: 22px;
   margin-right: 10px;
 }
 
@@ -855,6 +857,7 @@ textarea.form-popup__input {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 30px;
           flex: 0 0 30px;
+  width: 30px;
 }
 
 .info__text {
