--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,3 @@
-@font-face {
-  font-family: "PT Sans";
-  font-display: swap;
-  src: url("../fonts/PTSans-Regular.woff") format("woff"), url("../fonts/PTSans-Regular.woff2") format("woff2");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "PT Sans";
-  font-display: swap;
-  src: url("../fonts/PTSans-Bold.woff") format("woff"), url("../fonts/PTSans-Bold.woff2") format("woff2");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Fira Sans";
-  font-display: swap;
-  src: url("../fonts/FiraSans-Regular.woff") format("woff"), url("../fonts/FiraSans-Regular.woff2") format("woff2");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Fira Sans";
-  font-display: swap;
-  src: url("../fonts/FiraSans-Bold.woff") format("woff"), url("../fonts/FiraSans-Bold.woff2") format("woff2");
-  font-weight: 700;
-  font-style: normal;
-}
-
 * {
   padding: 0px;
   margin: 0px;
@@ -349,8 +317,7 @@ textarea {
   transition: all 0.3s ease 0s;
   background-color: #fff;
   position: relative;
-  width: 100%;
-  max-width: 330px;
+  width: 50%;
   border-radius: 5px;
 }
 
@@ -370,7 +337,6 @@ textarea {
 
 .popup__body_city {
   padding: 30px;
-  max-width: 420px;
 }
 
 .popup__close {
@@ -1907,9 +1873,7 @@ textarea.form-popup__input {
   }
 
   .menu-header__list._active {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    display: block;
   }
 
   .menu-header__list li {
@@ -2290,6 +2254,10 @@ textarea.form-popup__input {
     max-width: none;
   }
 
+  .popup__body {
+    width: 100%;
+  }
+
   .preview__list {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -2313,10 +2281,6 @@ textarea.form-popup__input {
 }
 
 @media (max-width: 479.98px) {
-  .popup__body {
-    max-width: none;
-  }
-
   .form-popup__button {
     width: 100%;
   }
