--- a/css/style.css
+++ b/css/style.css
@@ -118,352 +118,6 @@ body._lock {
   padding: 0 15px;
 }
 
-.btn {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  position: relative;
-  padding: 10px 20px;
-  background: -webkit-gradient(linear, left top, left bottom, from(#ed1c24), to(#d51b22));
-  background: -o-linear-gradient(top, #ed1c24, #d51b22);
-  background: linear-gradient(to bottom, #ed1c24, #d51b22);
-  -webkit-box-shadow: 0 10px 18px 0 rgba(237, 28, 36, 0.24);
-          box-shadow: 0 10px 18px 0 rgba(237, 28, 36, 0.24);
-  border-bottom: 2px solid #a9191e;
-  border-radius: 3px;
-}
-
-.btn span {
-  position: relative;
-  z-index: 2;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: normal;
-  color: #fff;
-}
-
-.btn::after {
-  content: '';
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: -webkit-gradient(linear, left top, left bottom, from(#ed701c), to(#d5471b));
-  background: -o-linear-gradient(top, #ed701c, #d5471b);
-  background: linear-gradient(to bottom, #ed701c, #d5471b);
-  border-radius: 3px;
-  opacity: 0;
-  -webkit-transition: all 0.8s;
-  -o-transition: all 0.8s;
-  transition: all 0.8s;
-}
-
-.btn:hover::after {
-  opacity: 1;
-}
-
-input[type="text"],
-input[type="email"],
-input[type="tel"],
-textarea {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
-._swiper {
-  overflow: hidden;
-}
-
-._swiper .swiper-wrapper {
-  width: 100%;
-  height: 100%;
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: relative;
-}
-
-._swiper.swiper-container-vertical .swiper-wrapper {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-._swiper.swiper-container-autoheight .swiper-wrapper {
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-}
-
-.swiper-container-initialized .swiper-slide {
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-}
-
-.swiper-container-android .swiper-slide,
-.swiper-container-android .swiper-wrapper {
-  -webkit-transform: translate3d(0px, 0, 0);
-          transform: translate3d(0px, 0, 0);
-}
-
-.swiper-button-lock {
-  display: none !important;
-}
-
-.popup {
-  -webkit-overflow-scrolling: touch;
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  z-index: 100;
-  padding: 10px 10px;
-  width: 100%;
-  height: 100%;
-  visibility: hidden;
-  -webkit-transition: visibility 0.8s ease 0s;
-  -o-transition: visibility 0.8s ease 0s;
-  transition: visibility 0.8s ease 0s;
-}
-
-.popup::before {
-  content: "";
-  background-color: rgba(0, 0, 0, 0.6);
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  -webkit-transition: opacity 0.8s ease 0s;
-  -o-transition: opacity 0.8s ease 0s;
-  transition: opacity 0.8s ease 0s;
-}
-
-.popup.show {
-  visibility: visible;
-  overflow: auto;
-}
-
-.popup.show::before {
-  opacity: 1;
-}
-
-.popup.show .popup__body {
-  -webkit-transform: scale(1);
-      -ms-transform: scale(1);
-          transform: scale(1);
-}
-
-.popup._active {
-  visibility: visible;
-  overflow: auto;
-}
-
-.popup._active::before {
-  opacity: 1;
-}
-
-.popup._active .popup__body {
-  -webkit-transition: all 0.3s ease 0.2s;
-  -o-transition: all 0.3s ease 0.2s;
-  transition: all 0.3s ease 0.2s;
-  -webkit-transform: scale(1);
-      -ms-transform: scale(1);
-          transform: scale(1);
-}
-
-.popup__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  min-height: 100%;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
-  width: 100%;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  align-items: center;
-}
-
-.popup__body {
-  -webkit-transform: scale(0);
-      -ms-transform: scale(0);
-          transform: scale(0);
-  -webkit-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
-  background-color: #fff;
-  position: relative;
-  width: 50%;
-  border-radius: 5px;
-}
-
-.popup__body::after {
-  content: '';
-  position: absolute;
-  width: 97%;
-  height: 10px;
-  bottom: -10px;
-  left: 1.5%;
-  border-bottom-left-radius: 3px;
-  border-bottom-right-radius: 3px;
-  background-color: #dbecf8;
-  -webkit-box-shadow: 0 10px 18px 0 rgba(45, 140, 148, 0.24);
-          box-shadow: 0 10px 18px 0 rgba(45, 140, 148, 0.24);
-}
-
-.popup__body_city {
-  padding: 30px;
-}
-
-.popup__close {
-  position: absolute;
-  right: 14px;
-  top: 17px;
-  width: 25px;
-  height: 25px;
-  cursor: pointer;
-}
-
-.popup__close::after,
-.popup__close::before {
-  content: '';
-  position: absolute;
-  top: calc(50% - 1px);
-  width: 100%;
-  height: 2px;
-  background-color: rgba(0, 0, 0, 0.2);
-}
-
-.popup__close::after {
-  -webkit-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-          transform: rotate(45deg);
-}
-
-.popup__close::before {
-  -webkit-transform: rotate(-45deg);
-      -ms-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-}
-
-.popup__title {
-  padding: 0 30px;
-  height: 60px;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 60px;
-  color: #fff;
-  background-color: #329cff;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-}
-
-.popup__title_city {
-  height: auto;
-  margin-bottom: 10px;
-  padding: 0;
-  font-size: 20px;
-  line-height: 1.4;
-  color: #3c3c3c;
-  background-color: transparent;
-}
-
-.popup__text {
-  margin: 15px 0;
-  font-size: 14px;
-  font-weight: 700;
-  color: #3c3c3c;
-}
-
-.popup__list li {
-  padding-bottom: 5px;
-}
-
-.popup__link {
-  position: relative;
-  font-size: 17px;
-  color: #337ab7;
-  -webkit-transition: color ease 0.5s;
-  -o-transition: color ease 0.5s;
-  transition: color ease 0.5s;
-}
-
-.popup__link::after {
-  content: '';
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  width: 0;
-  height: 1px;
-  background-color: #337ab7;
-  -webkit-transition: all ease 0.5s;
-  -o-transition: all ease 0.5s;
-  transition: all ease 0.5s;
-}
-
-.popup__link:hover {
-  color: #23527c;
-}
-
-.popup__link:hover::after {
-  left: 0;
-  width: 100%;
-  background-color: #23527c;
-}
-
-.form-popup {
-  padding: 25px 30px 30px 30px;
-}
-
-.form-popup__text {
-  margin-bottom: 15px;
-  font-size: 16px;
-  font-family: 'PT Sans', sans-serif;
-  color: #3C3C3C;
-}
-
-.form-popup__input {
-  margin-bottom: 10px;
-  padding: 0 18px;
-  width: 100%;
-  height: 53px;
-  font-size: 14px;
-  color: #3C3C3C;
-  border: 1px solid #cce4fa;
-  border-radius: 3px;
-  -webkit-box-shadow: 0 2px 6px 0 rgba(0, 106, 172, 0.24) inset;
-          box-shadow: 0 2px 6px 0 rgba(0, 106, 172, 0.24) inset;
-}
-
-textarea.form-popup__input {
-  padding: 18px;
-  min-height: 120px;
-}
-
 .header__content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -834,6 +488,352 @@ textarea.form-popup__input {
   left: 0;
   top: calc(50% - 16px);
   background: url("../img/icons/top-check.png") center/100% no-repeat;
+}
+
+.btn {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  position: relative;
+  padding: 10px 20px;
+  background: -webkit-gradient(linear, left top, left bottom, from(#ed1c24), to(#d51b22));
+  background: -o-linear-gradient(top, #ed1c24, #d51b22);
+  background: linear-gradient(to bottom, #ed1c24, #d51b22);
+  -webkit-box-shadow: 0 10px 18px 0 rgba(237, 28, 36, 0.24);
+          box-shadow: 0 10px 18px 0 rgba(237, 28, 36, 0.24);
+  border-bottom: 2px solid #a9191e;
+  border-radius: 3px;
+}
+
+.btn span {
+  position: relative;
+  z-index: 2;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: normal;
+  color: #fff;
+}
+
+.btn::after {
+  content: '';
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: -webkit-gradient(linear, left top, left bottom, from(#ed701c), to(#d5471b));
+  background: -o-linear-gradient(top, #ed701c, #d5471b);
+  background: linear-gradient(to bottom, #ed701c, #d5471b);
+  border-radius: 3px;
+  opacity: 0;
+  -webkit-transition: all 0.8s;
+  -o-transition: all 0.8s;
+  transition: all 0.8s;
+}
+
+.btn:hover::after {
+  opacity: 1;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+textarea {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+._swiper {
+  overflow: hidden;
+}
+
+._swiper .swiper-wrapper {
+  width: 100%;
+  height: 100%;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+
+._swiper.swiper-container-vertical .swiper-wrapper {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+._swiper.swiper-container-autoheight .swiper-wrapper {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.swiper-container-initialized .swiper-slide {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+.swiper-container-android .swiper-slide,
+.swiper-container-android .swiper-wrapper {
+  -webkit-transform: translate3d(0px, 0, 0);
+          transform: translate3d(0px, 0, 0);
+}
+
+.swiper-button-lock {
+  display: none !important;
+}
+
+.popup {
+  -webkit-overflow-scrolling: touch;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 100;
+  padding: 10px 10px;
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+  -webkit-transition: visibility 0.8s ease 0s;
+  -o-transition: visibility 0.8s ease 0s;
+  transition: visibility 0.8s ease 0s;
+}
+
+.popup::before {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.6);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  -webkit-transition: opacity 0.8s ease 0s;
+  -o-transition: opacity 0.8s ease 0s;
+  transition: opacity 0.8s ease 0s;
+}
+
+.popup.show {
+  visibility: visible;
+  overflow: auto;
+}
+
+.popup.show::before {
+  opacity: 1;
+}
+
+.popup.show .popup__body {
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
+}
+
+.popup._active {
+  visibility: visible;
+  overflow: auto;
+}
+
+.popup._active::before {
+  opacity: 1;
+}
+
+.popup._active .popup__body {
+  -webkit-transition: all 0.3s ease 0.2s;
+  -o-transition: all 0.3s ease 0.2s;
+  transition: all 0.3s ease 0.2s;
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
+}
+
+.popup__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  width: 100%;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  align-items: center;
+}
+
+.popup__body {
+  -webkit-transform: scale(0);
+      -ms-transform: scale(0);
+          transform: scale(0);
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  background-color: #fff;
+  position: relative;
+  width: 50%;
+  border-radius: 5px;
+}
+
+.popup__body::after {
+  content: '';
+  position: absolute;
+  width: 97%;
+  height: 10px;
+  bottom: -10px;
+  left: 1.5%;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+  background-color: #dbecf8;
+  -webkit-box-shadow: 0 10px 18px 0 rgba(45, 140, 148, 0.24);
+          box-shadow: 0 10px 18px 0 rgba(45, 140, 148, 0.24);
+}
+
+.popup__body_city {
+  padding: 30px;
+}
+
+.popup__close {
+  position: absolute;
+  right: 14px;
+  top: 17px;
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+}
+
+.popup__close::after,
+.popup__close::before {
+  content: '';
+  position: absolute;
+  top: calc(50% - 1px);
+  width: 100%;
+  height: 2px;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.popup__close::after {
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.popup__close::before {
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.popup__title {
+  padding: 0 30px;
+  height: 60px;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 60px;
+  color: #fff;
+  background-color: #329cff;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.popup__title_city {
+  height: auto;
+  margin-bottom: 10px;
+  padding: 0;
+  font-size: 20px;
+  line-height: 1.4;
+  color: #3c3c3c;
+  background-color: transparent;
+}
+
+.popup__text {
+  margin: 15px 0;
+  font-size: 14px;
+  font-weight: 700;
+  color: #3c3c3c;
+}
+
+.popup__list li {
+  padding-bottom: 5px;
+}
+
+.popup__link {
+  position: relative;
+  font-size: 17px;
+  color: #337ab7;
+  -webkit-transition: color ease 0.5s;
+  -o-transition: color ease 0.5s;
+  transition: color ease 0.5s;
+}
+
+.popup__link::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  width: 0;
+  height: 1px;
+  background-color: #337ab7;
+  -webkit-transition: all ease 0.5s;
+  -o-transition: all ease 0.5s;
+  transition: all ease 0.5s;
+}
+
+.popup__link:hover {
+  color: #23527c;
+}
+
+.popup__link:hover::after {
+  left: 0;
+  width: 100%;
+  background-color: #23527c;
+}
+
+.form-popup {
+  padding: 25px 30px 30px 30px;
+}
+
+.form-popup__text {
+  margin-bottom: 15px;
+  font-size: 16px;
+  font-family: 'PT Sans', sans-serif;
+  color: #3C3C3C;
+}
+
+.form-popup__input {
+  margin-bottom: 10px;
+  padding: 0 18px;
+  width: 100%;
+  height: 53px;
+  font-size: 14px;
+  color: #3C3C3C;
+  border: 1px solid #cce4fa;
+  border-radius: 3px;
+  -webkit-box-shadow: 0 2px 6px 0 rgba(0, 106, 172, 0.24) inset;
+          box-shadow: 0 2px 6px 0 rgba(0, 106, 172, 0.24) inset;
+}
+
+textarea.form-popup__input {
+  padding: 18px;
+  min-height: 120px;
 }
 
 .info {
@@ -2372,10 +2372,6 @@ textarea.form-popup__input {
     max-width: none;
   }
 
-  .popup__body {
-    width: 100%;
-  }
-
   .preview__list {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -2383,6 +2379,10 @@ textarea.form-popup__input {
 
   .preview__list li {
     padding: 10px 0 10px 35px;
+  }
+
+  .popup__body {
+    width: 100%;
   }
 
   .conditions__item {
@@ -2399,17 +2399,22 @@ textarea.form-popup__input {
 }
 
 @media (max-width: 479.98px) {
-  .form-popup__button {
-    width: 100%;
-  }
-
   .preview {
     height: 430px;
     padding: 20px 0 20px;
+    background-size: auto 430px;
   }
 
   .preview__title br {
     display: inline-block;
+  }
+
+  .preview__list {
+    display: block;
+  }
+
+  .form-popup__button {
+    width: 100%;
   }
 
   .page-form__button span {
