--- a/css/style.css
+++ b/css/style.css
@@ -2400,9 +2400,9 @@ textarea.form-popup__input {
 
 @media (max-width: 479.98px) {
   .preview {
+    width: 100%;
     height: 430px;
     padding: 20px 0 20px;
-    background: url("../img/top-screen-mobile-small.webp") center/cover no-repeat;
   }
 
   .preview__title br {
