--- a/css/style.css
+++ b/css/style.css
@@ -2403,18 +2403,33 @@ textarea.form-popup__input {
 }
 
 @media (max-width: 479.98px) {
+  .info-header__item_phone .info-header__text {
+    height: 22px;
+  }
+
   .preview {
     width: 100%;
-    height: 430px;
-    padding: 20px 0 20px;
+    height: 400px;
+    padding: 15px 0 15px;
+  }
+
+  .preview__title {
+    margin-bottom: 20px;
+    height: 120px;
   }
 
   .preview__title br {
     display: inline-block;
   }
 
+  .preview__text {
+    margin-bottom: 20px;
+    height: 88px;
+  }
+
   .preview__list {
     display: block;
+    height: 126px;
   }
 
   .form-popup__button {
