--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ body._lock {
   margin: 0 0 0 10px;
   font-size: 16px;
   font-weight: 700;
-  line-height: normal;
+  line-height: 1.2;
 }
 
 .header__slogan span {
@@ -473,14 +473,15 @@ body._lock {
   margin: 0 0 20px;
   padding: 0;
   font-size: 33px;
-  line-height: normal;
+  line-height: 1.2;
   font-weight: 700;
   color: #329cff;
-  /*&_red {
-			padding: 0 5px;
-			color: #fff;
-			background: #ed1c24;
-		}*/
+}
+
+.preview__title_red {
+  padding: 0 5px;
+  color: #fff;
+  background: #ed1c24;
 }
 
 .preview__text {
