--- a/css/style.css
+++ b/css/style.css
@@ -452,19 +452,7 @@ body._lock {
   position: relative;
   padding: 15px 0 15px;
   height: 410px;
-  background-color: #333;
-  /*&__bg {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		object-fit: cover;
-		@media (min-width: $md4+px) {
-			display: none;
-		}
-	}*/
+  background: url("../img/top-screen-mobile-small.webp") center/cover no-repeat;
 }
 
 .preview__title {
