--- a/css/style.css
+++ b/css/style.css
@@ -1173,7 +1173,7 @@ textarea.form-popup__input {
 
 .page-form {
   padding: 75px 0;
-  background: url("../img/page-form/form-bg.png") left bottom/cover no-repeat;
+  background: url("../img/page-form/form-bg.jpg") left bottom/cover no-repeat;
 }
 
 .page-form__body {
