--- a/css/style.css
+++ b/css/style.css
@@ -590,7 +590,7 @@ textarea {
   transition: all 0.3s ease 0s;
   background-color: #fff;
   position: relative;
-  max-width: 450px;
+  width: 450px;
   border-radius: 5px;
 }
 
@@ -610,7 +610,6 @@ textarea {
 
 .popup__body_city {
   padding: 30px;
-  width: 50%;
 }
 
 .popup__close {
